--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,9 @@ jobs:
       - run:
           name: "Run tests"
           command: |
-            HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080)
-            if [ "$HTTP_STATUS" -ne 200 ]; then
-              echo "Unexpected HTTP status: $HTTP_STATUS"
-              exit 1
-            fi
-            echo "Service responded with HTTP 200 OK"
+            sleep 5
+            curl -sSf http://localhost:8080/ || exit 1
+
 
 
 workflows:
