--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,3 +9,5 @@ workflows:
           image: node-js-sample
           tag: latest
           deploy: true
+          docker-username: $DOCKER_LOGIN
+          docker-password: $DOCKER_PASSWORD
